Fixed error in CSS that caused footer overflow

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -105,7 +105,7 @@ p {
 .Row:after { 
 	display: table; 
 	clear: both; 
-
+    content: " ";
 }
 
 
